Bug 74723 - main/shaderapi.c:407: detach_shader: Assertion `shProg->Shaders[j]->Type == 0x8B31 || shProg->Shaders[j]->Type == 0x8B30' failed.
Summary: main/shaderapi.c:407: detach_shader: Assertion `shProg->Shaders[j]->Type == 0...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-08 20:11 UTC by Andreas Boll
Modified: 2014-02-10 01:17 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
bt full (2.72 KB, text/plain)
2014-02-08 20:24 UTC, Andreas Boll
Details
update assertion for GS (916 bytes, patch)
2014-02-08 20:40 UTC, Brian Paul
Details | Splinter Review

Description Andreas Boll 2014-02-08 20:11:04 UTC
I get this failing assertion when replaying the trace file (attachment 93670 [details]) from bug 74718

mesa is compiled with --enable-debug


Tested with:
llvmpipe with MESA_GLSL_VERSION_OVERRIDE=330 MESA_GL_VERSION_OVERRIDE=3.3

and with r600g
OpenGL renderer string: Gallium 0.4 on AMD BARTS
OpenGL core profile version string: 3.3 (Core Profile) Mesa 10.2.0-devel (git-6e8d04a)
OpenGL core profile shading language version string: 3.30
OpenGL core profile context flags: (none)
OpenGL core profile profile mask: core profile
OpenGL core profile extensions:
OpenGL version string: 3.0 Mesa 10.2.0-devel (git-6e8d04a)
OpenGL shading language version string: 1.30
Comment 1 Andreas Boll 2014-02-08 20:24:13 UTC
Created attachment 93675 [details]
bt full
Comment 2 Brian Paul 2014-02-08 20:40:21 UTC
Created attachment 93676 [details] [review]
update assertion for GS

Can you try this patch?
Comment 3 Andreas Boll 2014-02-08 20:53:57 UTC
Tested-by: Andreas Boll <andreas.boll.dev@gmail.com>

Candidate for stable?

Thanks!
Comment 4 Brian Paul 2014-02-08 21:22:37 UTC
(In reply to comment #3)
> Tested-by: Andreas Boll <andreas.boll.dev@gmail.com>
> 
> Candidate for stable?
> 
> Thanks!

Yes, I'll tag it for 10.0 and 10.1
Comment 5 Brian Paul 2014-02-08 21:23:30 UTC
Fixed in commit c325ec896545cc909f2f0e359f0bb0513a8a53b5
Comment 6 Ian Romanick 2014-02-10 01:17:39 UTC
Comment on attachment 93676 [details] [review]
update assertion for GS

Review of attachment 93676 [details] [review]:
-----------------------------------------------------------------

That patch looks good.  I'm surprised we've never hit this before... seems we need a piglit test (since most developers use debug builds).

Reviewed-by: Ian Romanick <ian.d.romanick@intel.com>

A good follow-up patch would remove the extra { } and fix the indentation. :)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.